[project]
name = "patchmaps"
version = "0.2.0"
authors = [
    {name = "Marco Donat & Jonas Geistert", email = "marco.donat@zalf.de"},
]
description = "Creates rectangular Patchstructure parallel to permanent traffic lines"
readme = "README.md"
requires-python = ">=3.10, <3.13"
keywords = ["one", "two"]
license = {text = "MIT"}
dependencies = [
    "geopandas >=1.0.0,<2.0.0",
    "numpy >=2.0.0,<3.0.0",
    "pyproj >= 3.0.1, <4.0.0",
    "shapely >= 2.0.0, <3.0.0",
    "scikit-learn (>=1.7.0,<2.0.0)", 
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

